# MemGraph

./: .gitignore  CMakeLists.txt  Doxyfile  Examples.cpp  Examples.h  GraphvizPlotter.cpp  GraphvizPlotter.h  Predator.cpp  Predator.h  README.md  Utility.h  attribute.cpp  attribute.h  attributes.cpp  attributes.h  available_attrs.cpp  available_attrs.h  edge.cpp  edge.h  graph.cpp  graph.h  graphComponent.cpp  graphComponent.h  graph_component.cpp  graph_component.h  graphviz_attrs.cpp  graphviz_attrs.h  graphviz_plotter.cpp  graphviz_plotter.h  main.cpp  node.cpp  node.h  plotter.cpp  plotter.h  predator_wrapper.cpp  predator_wrapper.h  utility.cpp  utility.h
dokumentace/html/: annotated.html  attribute_8h_source.html  attributes_8h_source.html  class_examples-members.html  class_examples.html  class_predator_wrapper-members.html  class_predator_wrapper.html  class_utility-members.html  class_utility.html  classes.html  classmemgraph_1_1_attribute-members.html  classmemgraph_1_1_attribute.html  classmemgraph_1_1_attributes-members.html  classmemgraph_1_1_attributes.html  classmemgraph_1_1_edge-members.html  classmemgraph_1_1_edge.html  classmemgraph_1_1_graph-members.html  classmemgraph_1_1_graph.html  classmemgraph_1_1_graph_component-members.html  classmemgraph_1_1_graph_component.html  classmemgraph_1_1_graphviz_attrs-members.html  classmemgraph_1_1_graphviz_attrs.html  classmemgraph_1_1_graphviz_plotter-members.html  classmemgraph_1_1_graphviz_plotter.html  classmemgraph_1_1_node-members.html  classmemgraph_1_1_node.html  classmemgraph_1_1_plotter-members.html  classmemgraph_1_1_plotter.html  classmemgraph_1_1_subgraph-members.html  classmemgraph_1_1_subgraph.html  edge_8h_source.html  examples_8h_source.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_8h_source.html  graph__component_8h_source.html  graphviz__attrs_8h_source.html  graphviz__plotter_8h_source.html  (+11 more)
dokumentace/latex/: annotated.tex  class_examples.tex  class_predator_wrapper.tex  class_utility.tex  classmemgraph_1_1_attribute.tex  classmemgraph_1_1_attributes.tex  classmemgraph_1_1_edge.tex  classmemgraph_1_1_graph.eps  classmemgraph_1_1_graph.tex  classmemgraph_1_1_graph_component.eps  hierarchy.tex  refman.tex  (+11 more)
predator/sl/Memgraph/: CMakeLists.txt  README
(+28 files in other folders)
